@@ -438,8 +438,6 @@ fl_set_spinner_value( FL_OBJECT * obj,
                       double      val )
 {
     FLI_SPINNER_SPEC *sp = obj->spec;
-    int max_len = 4 + sp->prec + log10( DBL_MAX );
-    char *buf = fl_malloc( max_len );
 
     if ( obj->type == FL_INT_SPINNER )
     {
@@ -450,10 +448,8 @@ fl_set_spinner_value( FL_OBJECT * obj,
         else if ( val < sp->i_min )
             sp->i_val = sp->i_min;
 
-        sprintf( buf, "%d", sp->i_val );
-        fl_set_input( sp->input, buf );
+        fl_set_input_f( sp->input, "%d", sp->i_val );
 
-        fl_free( buf );
         return sp->old_ival = sp->i_val;
     }
 
@@ -464,10 +460,8 @@ fl_set_spinner_value( FL_OBJECT * obj,
     else if ( val < sp->f_min )
         sp->f_val = sp->f_min;
 
-    sprintf( buf, "%.*f", sp->prec, sp->f_val );
-    fl_set_input( sp->input, buf );
+    fl_set_input_f( sp->input, "%.*f", sp->prec, sp->f_val );
 
-    fl_free( buf );
     return sp->old_fval = sp->f_val;
 }
 
